syntax = "proto3";

message ChatRoomMsg {

     string fromId=1;
     string content=2;
}