syntax = "proto3";

message LeaveRoomMsg {
     string code=1;
     string msg=2;
}