syntax = "proto3";


message MsgPing {

}