syntax = "proto3";


message MsgPong {

}