syntax = "proto3";


message ReadyStartMsg {

}