syntax = "proto3";

message RoomListMsg {
     string uid=1;
     int32 skillId=2;
     float x=3;
     float y=4;
     float z=5;
     float ex=6;
     float ey=7;
     float ez=8;
     int32 curPage=9;
     int32 pageSize=10;
     int32 size=11;
     repeated RoomInfo rooms=12;
     string code=13;
     string msg=14;
}

message RoomInfo {
     string id=1;
     int32 maxCount=2;
     int32 count=3;
     int32 status=4;
     repeated PlayerRoom players=5;
}

message GetRoomInfoMsg {
     repeated PlayerRoom players=1;
     string code=2;
     string msg=3;
}

message PlayerRoom {
     string uid=1;
     string username=2;
     string nickname=3;
     int32 degree=4;
     int32 score=5;
     int32 roomStatus=6;
}

